Prevent getAll from stranding entries on a malformed key
The getAll variants inserted a proxy (or loaded an entry) per key
while iterating the input, so a later null or throwing-hashCode key
stranded the earlier entries after the call threw: a permanently
incomplete future in the async bulk path, a partial load in the
per-key paths. Seed the result map with null values to deduplicate
and validate the keys up front, before touching the cache, mirroring
LocalManualCache.getAll.