@@ -50,6 +50,7 @@ import static org.slf4j.event.Level.WARN;
 
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.EnumSet;
 import java.util.HashMap;
@@ -416,9 +417,21 @@ final class AsyncCacheTest {
   @CheckNoStats
   @ParameterizedTest
   @CacheSpec(removalListener = { Listener.DISABLED, Listener.REJECTING })
-  void getAllFunction_nullKey(AsyncCache<Int, Int> cache) {
-    assertThrows(NullPointerException.class, () -> cache.getAll(
-        Collections.singletonList(nullKey()), keys -> { throw new AssertionError(); }));
+  void getAllFunction_nullKey(AsyncCache<Int, Int> cache, CacheContext context) {
+    var key1 = Iterables.get(context.absentKeys(), 0);
+    var key2 = Iterables.get(context.absentKeys(), 1);
+    var inputs = List.of(
+        Collections.singleton(nullKey()),
+        Arrays.asList(key1, nullKey()),
+        Arrays.asList(nullKey(), key1, key2),
+        Arrays.asList(key1, nullKey(), key2),
+        Arrays.asList(key1, key2, nullKey()));
+    for (var keys : inputs) {
+      assertThrows(NullPointerException.class, () -> cache.getAll(
+          keys, keysToLoad -> { throw new AssertionError(); }));
+      assertThat(cache).doesNotContainKey(key1);
+      assertThat(cache).doesNotContainKey(key2);
+    }
   }
 
   @CheckNoStats
